# pytest-lesson1

./: pyproject.toml
tests/: conftest.py  test_fixtures.py  test_indirect.py  test_parametrized.py
